--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -3,7 +3,7 @@
     name: common
     tasks_from: install-nodejs
 
-- name: set-up {{component}} application
+- name: "set-up {{component}} application"
   ansible.builtin.import_role:
     name: common
     tasks_from: app-setup
