--- a/roles/common/tasks/loading-mongodb-schema.yml
+++ b/roles/common/tasks/loading-mongodb-schema.yml
@@ -9,4 +9,4 @@
     state: installed
 
 - name: loading schema
-  ansible.builtin.shell: mongo --host mongodb.cloudevops.cloud < /app/schema/{{component}}.js
+  ansible.builtin.shell: "mongo --host mongodb.cloudevops.cloud < /app/schema/{{component}}.js"
