--- a/roles/common/tasks/systemd-service.yml
+++ b/roles/common/tasks/systemd-service.yml
@@ -1,16 +1,16 @@
-- name: Copying {{component}}.service file
+- name: "Copying {{component}}.service file"
   ansible.builtin.copy:
-    src: {{component}}.service
-    dest: /etc/systemd/system/{{component}}.service
+    src: "{{component}}.service"
+    dest: "/etc/systemd/system/{{component}}.service"
 
 - name: load Systemd service
   ansible.builtin.systemd_service:
-    name: {{component}}.service
+    name: "{{component}}.service"
     state: reloaded
   ignore_errors: yes
 
-- name: enable and starting {{component}} service
+- name: "enable and starting {{component}} service"
   ansible.builtin.service:
-    name: {{component}}
+    name: "{{component}}"
     state: started
     enabled: yes
